--- a/project/build.xml
+++ b/project/build.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Fell" default="main" basedir=".">
+	<property name="git.dir" location="C:/github/fell/project" />
 	<property name="src.dir" location="src" />
 	<property name="build.dir" location="bin" />
 	<property name="dist.dir" location="dist" />
@@ -36,8 +37,8 @@
 	</target>
 	<target name="jar" depends="compile">
 		<copy todir="${build.dir}/com/monolc/fell/version">
-		    <fileset file="${src.dir}/com/monolc/fell/version/version"/>
-		    <fileset file="${src.dir}/com/monolc/fell/version/buildnumber"/>
+			<fileset file="${src.dir}/com/monolc/fell/version/version" />
+			<fileset file="${src.dir}/com/monolc/fell/version/buildnumber" />
 		</copy>
 		<jar destfile="${dist.dir}\fell.jar" basedir="${build.dir}">
 			<manifest>
@@ -45,14 +46,22 @@
 			</manifest>
 		</jar>
 		<copy todir="${dist.dir}">
-		    <fileset file="${lib.dir}/lwjgl.dll"/>
+			<fileset file="${lib.dir}/lwjgl.dll" />
 		</copy>
 	</target>
 	<target name="run" depends="jar">
 		<java classname="com.monolc.fell.Program" fork="false" classpathref="runtime.path">
 		</java>
 	</target>
-	<target name="main" depends="compile, jar, docs, run">
+	<target name="git">
+		<delete dir="${git.dir}" />
+		<mkdir dir="${git.dir}" />
+		<copy todir="${git.dir}">
+			<fileset dir="${src.dir}" includes="**" />
+			<fileset file="build.xml" />
+		</copy>
+	</target>
+	<target name="main" depends="compile, jar, docs, git, run">
 		<description>Main target</description>
 		<buildnumber file="src/com/monolc/fell/version/buildnumber" />
 	</target>
