--- a/project/build.xml
+++ b/project/build.xml
@@ -4,7 +4,6 @@
 	<property name="src.dir" location="src" />
 	<property name="build.dir" location="bin" />
 	<property name="dist.dir" location="dist" />
-	<property name="docs.dir" location="docs" />
 	<property name="lib.dir" location="lib" />
 	<path id="build.classpath">
 		<fileset dir="${lib.dir}">
@@ -17,23 +16,14 @@
 	</path>
 	<target name="clean">
 		<delete dir="${build.dir}" />
-		<delete dir="${docs.dir}" />
 		<delete dir="${dist.dir}" />
 	</target>
 	<target name="makedir">
 		<mkdir dir="${build.dir}" />
-		<mkdir dir="${docs.dir}" />
 		<mkdir dir="${dist.dir}" />
 	</target>
 	<target name="compile" depends="clean, makedir">
-		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" />
-	</target>
-	<target name="docs" depends="compile">
-		<javadoc packagenames="src" sourcepath="${src.dir}" destdir="${docs.dir}">
-			<fileset dir="${src.dir}">
-				<include name="**" />
-			</fileset>
-		</javadoc>
+		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" includeantruntime="false" />
 	</target>
 	<target name="jar" depends="compile">
 		<copy todir="${build.dir}/com/monolc/fell/version">
@@ -50,13 +40,15 @@
 		</copy>
 	</target>
 	<target name="run" depends="jar">
+		<record name="run.log" action="start" />
 		<java classname="com.monolc.fell.Program" fork="false" classpathref="runtime.path">
 		</java>
+		<record name="run.log" action="stop" />
 	</target>
 	<target name="git">
 		<delete dir="${git.dir}" />
 		<mkdir dir="${git.dir}" />
-		<mkdir dir = "${git.dir}/src" />
+		<mkdir dir="${git.dir}/src" />
 		<copy todir="${git.dir}">
 			<fileset file="build.xml" />
 		</copy>
@@ -64,7 +56,7 @@
 			<fileset dir="${src.dir}" includes="**" />
 		</copy>
 	</target>
-	<target name="main" depends="compile, jar, docs, git, run">
+	<target name="main" depends="compile, jar, git, run">
 		<description>Main target</description>
 		<buildnumber file="src/com/monolc/fell/version/buildnumber" />
 	</target>
