--- a/project/build.xml
+++ b/project/build.xml
@@ -26,10 +26,7 @@
 		</copy>
 	</target>
 	<target name="compile" depends="clean, makedir">
-		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" includeantruntime="false" />
-	</target>
-	<target name="compiledebug" depends="clean, makedir">
-		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" includeantruntime="false" debug="true" />
+		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" includeantruntime="false" debug="true"/>
 	</target>
 	<target name="jar" depends="compile">
 		<copy todir="${build.dir}/com/monolc/fell/version">
@@ -68,12 +65,12 @@
 			<fileset dir="${src.dir}" includes="**" />
 		</copy>
 	</target>
-	<target name="debug" depends="compiledebug, jar, git, run">
-		<description>Main target</description>
+	<target name="debug" depends="compile, jar, git, run">
+		<description>builds for debug target</description>
 		<buildnumber file="src/com/monolc/fell/version/buildnumber" />
 	</target>
 	<target name="publish" depends="compile, jar, git, run">
-		<description>Main target</description>
+		<description>builds for publish target</description>
 		<buildnumber file="src/com/monolc/fell/version/buildnumber" />
 	</target>
 </project>
